--- a/index.html
+++ b/index.html
@@ -9,5 +9,26 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+
+    <script type="module">
+      // Import the functions you need from the SDKs you need
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-app.js";
+      // TODO: Add SDKs for Firebase products that you want to use
+      // https://firebase.google.com/docs/web/setup#available-libraries
+    
+      // Your web app's Firebase configuration
+      const firebaseConfig = {
+        apiKey: "AIzaSyAOuRycIV6CPmwS_J6XcQDGiAbTWel75EY",
+        authDomain: "deploy-demo-790ac.firebaseapp.com",
+        projectId: "deploy-demo-790ac",
+        storageBucket: "deploy-demo-790ac.appspot.com",
+        messagingSenderId: "31299286262",
+        appId: "1:31299286262:web:7119e3ed8e541c2ed468d7"
+      };
+    
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+    </script>
+
   </body>
 </html>
