--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     
       // Your web app's Firebase configuration
       const firebaseConfig = {
-        apiKey: "AIzaSyAOuRycIV6CPmwS_J6XcQDGiAbTWel75EY",
-        authDomain: "deploy-demo-790ac.firebaseapp.com",
-        projectId: "deploy-demo-790ac",
-        storageBucket: "deploy-demo-790ac.appspot.com",
-        messagingSenderId: "31299286262",
-        appId: "1:31299286262:web:7119e3ed8e541c2ed468d7"
+        apiKey: "AIzaSyAO5xHzOOVPfOxaDXoYjJc5C_IWBCupY28",
+        authDomain: "deploy-demo-d557c.firebaseapp.com",
+        projectId: "deploy-demo-d557c",
+        storageBucket: "deploy-demo-d557c.appspot.com",
+        messagingSenderId: "119019981075",
+        appId: "1:119019981075:web:6b0b3ed71a657d0983f2e6"
       };
     
       // Initialize Firebase
