--- a/index.html
+++ b/index.html
@@ -4,31 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Deploy</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
 
-    <script type="module">
-      // Import the functions you need from the SDKs you need
-      import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-app.js";
-      // TODO: Add SDKs for Firebase products that you want to use
-      // https://firebase.google.com/docs/web/setup#available-libraries
-    
-      // Your web app's Firebase configuration
-      const firebaseConfig = {
-        apiKey: "AIzaSyAO5xHzOOVPfOxaDXoYjJc5C_IWBCupY28",
-        authDomain: "deploy-demo-d557c.firebaseapp.com",
-        projectId: "deploy-demo-d557c",
-        storageBucket: "deploy-demo-d557c.appspot.com",
-        messagingSenderId: "119019981075",
-        appId: "1:119019981075:web:6b0b3ed71a657d0983f2e6"
-      };
-    
-      // Initialize Firebase
-      const app = initializeApp(firebaseConfig);
-    </script>
 
   </body>
 </html>
